Stop using daemon threads for IO in services and platform, for cases where snapshots could be taken during jvm shutdown, use explicit shutdown handler for ThreadPool and interruption instead. Close standard output in ClassDep at the end of main method call as per Gregg Wonderly's suggestion. Eliminate a contention hotspot in ConnectionManager. Increase default connection timeout in ConnectionManager for extended periods of high load. Replace string concatenation in LeaseRenewDurRFE with StringBuilder Reduce number of threads used in stress tests, too many threads cause contention and actually reduce the load on the components being tested. Use RemoteEventComparator in NotifyOnSrvcLeaseExpiration. Reduce unnecessary thread consumption in Mahalo, use number of processors to assist default number of threads used, if not specified in configuration. Use a Collection<Permission> instead of Permissions, in PreferredClassLoader, Permissions caused contention in stress tests, where an unsynchronized non mutating final Collection<Permission> has no contention and is thread safe. Various minor improvements including @Override annotations. Remove UriString and associated tests.
git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/skunk/qa_refactor/trunk@1593493 13f79535-47bb-0310-9956-ffa450edef68